paseo/service.yml
apiVersion: v1
kind: Service
metadata:
  name: paseo
  namespace: paseo
spec:
  selector:
    app: paseo
  ports:
    - port: 6767
      targetPort: 6767
