paseo/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: paseo
  namespace: paseo
spec:
  ingressClassName: cloudflare-tunnel
  rules:
    - host: paseo.yhmd.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: paseo
                port:
                  number: 6767
